--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,8 +1,24 @@
 ﻿@page "/"
+@inject Toolbelt.Blazor.I18nText.I18nText I18nText
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item active">Home</li>
+    </ol>
+</nav>
 
-<h1>Hello, world!</h1>
+<h1>@L.HelloWorld</h1>
 
 Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
 <input type="text" class="form-control">
+
+@code{
+    I18nText.Home L = new I18nText.Home();
+
+    protected override async Task OnInitializedAsync()
+    {
+        //Load Localization
+        L = await I18nText.GetTextTableAsync<I18nText.Home>(this);
+    }
+}
